--- a/views/layout.html
+++ b/views/layout.html
@@ -5,6 +5,12 @@
   <head>
     <title>Trip Planner </title>
   </head>
+  <body>
+
+     <div class="container content">
+      {% block content %}{% endblock %}
+    </div>
+  </body>
 
 </html>
 
