Served up bower

--- a/views/error.html
+++ b/views/error.html
@@ -1,4 +1,5 @@
 <!-- ERROR HANDLING PAGE -->
 
-<h1>Your request is invalid: ERROR STATUS 500</h1>
+
+<h1>Your request is invalid: ERROR STATUS {{error}}</h1>
 
