--- a/views/index.html
+++ b/views/index.html
@@ -2,24 +2,32 @@
 
 {% block content %}
   <h3>Everything in Database</h3>
+
+
   <h4>Hotels</h4>
+  <div class="hotels">
   <select>
     {% for hotel in templateHotels %}
       <option>{{hotel.name}}</option>
     {% endfor %}
   </select>
+  </div>
 
   <h4>Restaurants</h4>
+  <div class="restaurants">
   <select>
     {% for restaurants in templateRestaurants %}
       <option>{{restaurants.name}}</option>
     {% endfor %}
   </select>
+  </div>
 
   <h4>Activities</h4>
+  <div class="activities">
   <select>
     {% for activities in templateActivities %}
       <option>{{activities.name}}</option>
     {% endfor %}
   </select>
+  </div>
 {% endblock %}
