--- a/views/layout.html
+++ b/views/layout.html
@@ -2,15 +2,58 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Trip Planner </title>
-  </head>
-  <body>
+<head>
+  <!-- SCRIPTS -->
+  <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/stylesheets/template.css">
+  <title>Trip Planner</title>
+</head>
 
-     <div class="container content">
-      {% block content %}{% endblock %}
+<!-- MAIN BODY -->
+<body>
+  <nav class="navbar navbar-default">
+    <ul class"nav navbar-nav">
+      <li class="nav-item">
+        <h4>Trip Planner</h4>
+      </li>
+
+      <li class="nav-item">
+        <h4>Home</h4>
+      </li>
+
+      <li class="nav-item">
+        <h4>About</h4>
+      </li>
+
+      <li class="nav-item">
+        <h4>Contact</h4>
+      </li>
+
+    </ul>
+  </nav>
+
+
+  <div class="map">
+    <div class="container">
+      <div class="row">
+      <div class = "col-lg-8">
+          <h3>Map goes here</h3>
+        </div>
+
+          <div class = "col-lg-4">
+            {% block content %}{% endblock %}
+          </div>
+
+      </div>
     </div>
-  </body>
+  </div>
+
+
+   <!--  <div class="container">
+    </div>
+  -->
+
+</body>
 
 </html>
 
