--- a/views/layout.html
+++ b/views/layout.html
@@ -4,49 +4,52 @@
 <html lang="en">
 <head>
   <!-- SCRIPTS -->
+  <!-- Loads jQuery from bower -->
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+  <script type="text/javascript" src="/js/maps.js"></script>
   <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/template.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBTSwLxyCS3yKklkOFjXFWZK274ycbK8Y&sensor=true"></script>
+
   <title>Trip Planner</title>
 </head>
 
 <!-- MAIN BODY -->
 <body>
+
+  <!-- Navigation Bar -->
   <nav class="navbar navbar-default">
+
+    <div class="navbar-header">
+
+      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-road"></span> Trip Planner</a>
+    </div>
+
     <ul class"nav navbar-nav">
-      <li class="nav-item">
-        <h4>Trip Planner</h4>
-      </li>
-
-      <li class="nav-item">
-        <h4>Home</h4>
-      </li>
-
-      <li class="nav-item">
-        <h4>About</h4>
-      </li>
-
-      <li class="nav-item">
-        <h4>Contact</h4>
-      </li>
-
+      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="#">About</a></li>
+      <li class="active"><a href="#">Contact</a></li>
     </ul>
   </nav>
 
 
+  <!-- Map and Menus -->
   <div class="map">
     <div class="container">
       <div class="row">
-      <div class = "col-lg-8">
-          <h3>Map goes here</h3>
+        <div class = "col-lg-8" id="map-canvas">
+
         </div>
 
-          <div class = "col-lg-4">
-            {% block content %}{% endblock %}
-          </div>
+        <div class = "col-lg-4">
+          {% block content %}{% endblock %}
+        </div>
 
       </div>
     </div>
   </div>
+
 
 
    <!--  <div class="container">
